Fri Nov  2 12:28:35 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc, htdoc/attrs.html: Added support for dc.date,
	dc.date.created and dc.date.modified to use_doc_date handling.

Fri Nov  2 12:12:59 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/xmlsearch.README, contrib/xmlsearch.tar.gz: Added files
	contributed by Nathan Hand and me to implement XML output from
	htsearch, including DTD, templates and config file.

Fri Nov  2 12:05:49 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (do_tag), htcommon/defaults.cc: Added ignore_alt_text
	attribute to avoid indexing alt text in img tags.
	* htdoc/attrs.html, cf_by{name,prog}.html: Documented it.

Thu Nov  1 14:43:13 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc (main): Fixed to only show file names in
	error messages when REQUEST_METHOD not set and -v option given,
	for security.

Thu Nov  1 10:19:27 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc, htsearch/Display.h: Added a localized
	method for outputing HTTP headers, added support for a new
	search_results_contenttype attribute to control that header.
	* htcommon/defaults.cc: Added default for it.
	* htdoc/attrs.html, cf_by{name,prog}.html: Documented it.

Wed Oct 31 13:31:18 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/english.0: Changed lots of dubious uses of suffixes to
	get more appropriate and correct fuzzy endings expansions.

Tue Oct 23 14:06:37 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (RetrievedDocument): Fixed handling of null
	return from getParsable(), to avoid segfault problem introduced
	by text/css conditional added Jul 25.

Fri Oct 19 17:24:19 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (hilight): Added Stefan Nehlsen's idea for
	anchor_target attribute.
	* htcommon/defaults.cc: Added default for it.